# mock-monero

./: justfile  monero_base.sage  monero_fcmp.sage  pyproject.toml
common/: pyproject.toml
common/src/common/: __init__.py  crypto.py  group.py  keys.py
common/tests/: test_crypto.py  test_group.py  test_keys.py
fcmp/: .gitignore  pyproject.toml
fcmp/src/fcmp/: __init__.py  group.py  keys.py  main.py  tree.py  tx.py  utils.py  verify.py  zkproof.py
fcmp/tests/: test_group.py  test_keys.py  test_main.py  test_tree.py  test_utils.py
monero/: pyproject.toml
monero/src/monero/: __init__.py  commitments.py  group.py  keys.py  main.py  range_proof.py  ring.py  transaction.py  utils.py  utxo.py  zklink.py
monero/tests/: test_keys.py  test_main.py  test_ring.py  test_transaction.py
