[project]
name = "common"
version = "0.1.0"
description = "Common utilities for Mock Monero project"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "common",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.uv.sources]
common = { workspace = true }