[project]
name = "monero"
version = "0.1.0"
description = "Mock Monero RingCT Implementation"  
requires-python = ">=3.11"
dependencies = ["common"]

[dependency-groups]
dev = [
    "monero",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/monero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.uv.sources]
monero = { workspace = true }
common = { workspace = true }
